--- a/TODO
+++ b/TODO
@@ -2,7 +2,8 @@ TODO
 ====
 1. Tohle by mela byt nejaka obecna knihovna. Pouzitelna i pro SGML::ESIS 
    i pro Tags::PYX a PYX/.
-2.
+2. Dodelat dokumentaci.
+3.
 
 Applied
 =======
