--- a/TODO
+++ b/TODO
@@ -3,10 +3,13 @@ TODO
 1. Tohle by mela byt nejaka obecna knihovna. Pouzitelna i pro SGML::ESIS 
    i pro Tags::PYX a PYX/.
 2. Dodelat dokumentaci.
-3. Predelat Makefile.PL na Module::Install.
 4. SIGNATURE
-5. examples/ adresar.
 6.
 
 Applied
 =======
+3. Predelat Makefile.PL na Module::Install.
+OK [20140223] skim
+
+5. examples/ adresar.
+OK [20130223] skim
