Add EXAMPLE1 and EXAMPLE2 sections to doc.

--- a/README
+++ b/README
@@ -33,10 +33,20 @@ EXAMPLE1
      # Modules.
      use PYX::Utils qw(decode);
 
-     # TODO
+     # Text.
+     my $text = "foo\nbar";
+
+     # Decode.
+     my $decoded_text = decode($text);
+
+     # Print to output.
+     print "Text: $text\n";
+     print "Decoded text: $decoded_text\n";
 
      # Output:
-     # TODO
+     # Text: foo
+     # bar
+     # Decoded text: foo\nbar
 
 EXAMPLE2
      # Pragmas.
@@ -46,10 +56,20 @@ EXAMPLE2
      # Modules.
      use PYX::Utils qw(encode);
 
-     # TODO
+     # Text.
+     my $text = 'foo\nbar';
+
+     # Encode text.
+     my $encoded_text = encode($text);
+
+     # Print to output.
+     print "Text: $text\n";
+     print "Encoded text: $encoded_text\n";
 
      # Output:
-     # TODO
+     # Text: foo\nbar
+     # Encoded text: foo
+     # bar
 
 EXAMPLE3
      # Pragmas.
