Add info to TODO.

--- a/TODO
+++ b/TODO
@@ -11,6 +11,7 @@ TODO
    zavislost.
 9. Pridat dalsi entities do testu?
    Mam pocit, ze zrovna &nbsp; neprochazi.
+Tak &nbsp; -> &#160 v raw podobe.
 10.
 
 Applied
