Update LICENSE AND COPYRIGHT section to my standard.

--- a/README
+++ b/README
@@ -135,7 +135,7 @@ AUTHOR
     Michal Špaček skim@cpan.org
 
 LICENSE AND COPYRIGHT
-    BSD license.
+    BSD 2-Clause License
 
 VERSION
     0.01
