--- a/README
+++ b/README
@@ -135,7 +135,8 @@ AUTHOR
     Michal Špaček skim@cpan.org
 
 LICENSE AND COPYRIGHT
-    BSD 2-Clause License
+     © Michal Špaček 2005-2014
+     BSD 2-Clause License
 
 VERSION
     0.03
