--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 0.03
  - Add minimal version of Perl.
  - Update LICENSE AND COPYRIGHT section in doc to reality.
+ - Update copyright years.
 
 0.02 2014-11-19T09:35:41+01:00
  - Fix dependencies.
