--- a/README
+++ b/README
@@ -135,7 +135,7 @@ AUTHOR
     Michal Špaček skim@cpan.org
 
 LICENSE AND COPYRIGHT
-     © Michal Špaček 2005-2014
+     © 2005-2015 Michal Špaček
      BSD 2-Clause License
 
 VERSION
