Fix SEE ALSO section to reality.

--- a/Changes
+++ b/Changes
@@ -1,5 +1,6 @@
 0.03
  - Add minimal version of Perl.
+ - Fix SEE ALSO section to reality.
  - Update LICENSE AND COPYRIGHT section in doc to reality.
  - Update copyright years.
 
