--- a/README
+++ b/README
@@ -129,6 +129,9 @@ DEPENDENCIES
 SEE ALSO
     PYX::GraphViz, PYX, PYX::Hist, PYX::Parser, PYX::Stack, Task::PYX.
 
+REPOSITORY
+    <https://github.com/tupinek/PYX-Utils>
+
 AUTHOR
     Michal Špaček skim@cpan.org
 
