Sort SEE ALSO section in doc.

--- a/README
+++ b/README
@@ -127,7 +127,7 @@ DEPENDENCIES
     Exporter, HTML::Entities, Readonly.
 
 SEE ALSO
-    PYX::GraphViz, PYX, PYX::Hist, PYX::Parser, PYX::Stack, Task::PYX.
+    PYX, PYX::GraphViz, PYX::Hist, PYX::Parser, PYX::Stack, Task::PYX.
 
 REPOSITORY
     <https://github.com/tupinek/PYX-Utils>
