--- a/Changes
+++ b/Changes
@@ -1,5 +1,6 @@
 0.04
  - Improve SEE ALSO section in doc.
+ - Move author tests to xt/ directory.
  - Update Module::Install to 1.16 version.
 
 0.03 2015-02-02T07:34:43+01:00
