Update Module::Install to 1.19 version

--- a/Changes
+++ b/Changes
@@ -1,5 +1,6 @@
 0.05
  - Update copyright years.
+ - Update Module::Install to 1.19 version.
 
 0.04 2015-09-27T22:58:39+02:00
  - Improve SEE ALSO section in doc.
