--- a/README
+++ b/README
@@ -134,10 +134,10 @@ REPOSITORY
     <https://github.com/tupinek/PYX-Utils>
 
 AUTHOR
-    Michal Špaček skim@cpan.org
+    Michal Josef Špaček skim@cpan.org
 
 LICENSE AND COPYRIGHT
-     © 2005-2020 Michal Špaček
+     © 2005-2020 Michal Josef Špaček
      BSD 2-Clause License
 
 VERSION
