--- a/Changes
+++ b/Changes
@@ -1,5 +1,6 @@
 0.05
  - Fix Makefile.PL fails with no '.' in @INC.
+ - Fix SYNOPSIS section in doc.
  - Improve LICENSE AND COPYRIGHT section in doc.
  - Update Module::Install to 1.19 version.
  - Update author name.
