--- a/README
+++ b/README
@@ -2,6 +2,8 @@ NAME
     PYX::Utils - A perl module for PYX common utilities.
 
 SYNOPSIS
+     use PYX::Utils;
+
      my $decoded_text = decode($text);
      my $encoded_text = encode($text);
      my $decoded_text = entity_decode($text);
