--- a/Changes
+++ b/Changes
@@ -1,5 +1,6 @@
 0.07
  - Fix bugtracker.
+ - Rewrite doc to use =head2 in SUBROUTINES section.
  - Update copyright years.
 
 0.06 2020-03-23T11:18:38+01:00
